Mixin for stage variables for different themes

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,14 +1,7 @@
+@use './mixins';
+
 body {
-	--bg-body: var(--clr-bg-body-light);
-	--bg-pattern: var(--clr-bg-pattern-light);
-	--bg-card: var(--clr-bg-card-light);
-	--bg-card-hover: var(--clr-bg-card-hover-light);
-	--clr-text: var(--clr-text-light);
-	--clr-heading: var(--clr-heading-light);
-	--clr-section-heading: var(--clr-section-heading-light);
-	--clr-toggle: var(--clr-toggle-light);
-	--clr-toggle-hover: var(--clr-toggle-hover-light);
-	--clr-divider: var(--clr-divider-light);
+	@include mixins.stage(light);
 
 	font-family: var(--ff);
 	font-weight: var(--fw-400);
@@ -16,29 +9,11 @@ body {
 	background-color: var(--bg-body);
 
 	&.theme-dark {
-		--bg-body: var(--clr-bg-body-dark);
-		--bg-pattern: var(--clr-bg-pattern-dark);
-		--bg-card: var(--clr-bg-card-dark);
-		--bg-card-hover: var(--clr-bg-card-hover-dark);
-		--clr-text: var(--clr-text-dark);
-		--clr-heading: var(--clr-heading-dark);
-		--clr-section-heading: var(--clr-section-heading-dark);
-		--clr-toggle: var(--clr-toggle-dark);
-		--clr-toggle-hover: var(--clr-toggle-hover-dark);
-		--clr-divider: var(--clr-divider-dark);
+		@include mixins.stage(dark);
 	}
 
 	@media (prefers-color-scheme: dark) {
-		--bg-body: var(--clr-bg-body-dark);
-		--bg-pattern: var(--clr-bg-pattern-dark);
-		--bg-card: var(--clr-bg-card-dark);
-		--bg-card-hover: var(--clr-bg-card-hover-dark);
-		--clr-text: var(--clr-text-dark);
-		--clr-heading: var(--clr-heading-dark);
-		--clr-section-heading: var(--clr-section-heading-dark);
-		--clr-toggle: var(--clr-toggle-dark);
-		--clr-toggle-hover: var(--clr-toggle-hover-dark);
-		--clr-divider: var(--clr-divider-dark);
+		@include mixins.stage(dark);
 	}
 }
 
