--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,8 @@
 @import './base/root';
 @import './base/reset';
 @import './base/base';
+
+@import './layout/container';
+
+@import './components/header';
+@import './components/theme-toggle';
