Summary section styling with related components

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,10 @@
 @import './base/base';
 
 @import './layout/container';
+@import './layout/grid';
+
+@import './utility/before-border-top';
 
 @import './components/header';
 @import './components/theme-toggle';
+@import './components/card';
