--- a/src/sass/base/_root.scss
+++ b/src/sass/base/_root.scss
@@ -7,7 +7,7 @@
 
 	--clr-facebook: hsl(208, 92%, 53%);
 	--clr-twitter: hsl(203, 89%, 53%);
-	--clr-instagram: linear-gradient(hsl(37, 97%, 70%) to hsl(329, 70%, 58%));
+	--clr-instagram: linear-gradient(to right, hsl(37, 97%, 70%) 0%, hsl(329, 70%, 58%) 100%);
 	--clr-youtube: hsl(348, 97%, 39%);
 
 	--clr-white: hsl(0, 0%, 100%);
