Margin for summary section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,4 +9,5 @@
 
 @import './components/header';
 @import './components/theme-toggle';
+@import './components/summary';
 @import './components/card';
