--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import './layout/grid';
 
 @import './utility/before-border-top';
+@import './utility/section-heading';
 
 @import './components/header';
 @import './components/theme-toggle';
