--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -30,6 +30,7 @@
 
 	&__stat {
 		font-size: var(--fz-large);
+		line-height: 1.1;
 
 		&--big {
 			--fz-large: 5.6rem;
@@ -54,5 +55,33 @@
 		gap: var(--gap);
 
 		text-align: center;
+	}
+
+	&--corner {
+		display: grid;
+		gap: 2.4rem;
+		grid-template-columns: repeat(2, 1fr);
+
+		// left column aligned to left
+		& > *:nth-child(2n + 1) {
+			justify-self: start;
+		}
+
+		// right column aligned to right
+		& > *:nth-child(2n) {
+			justify-self: end;
+		}
+
+		// top row aligned to top
+		& > *:nth-child(4n + 1),
+		& > *:nth-child(4n + 2) {
+			align-self: start;
+		}
+
+		// bottom row aligned to bottom
+		& > *:nth-child(4n + 3),
+		& > *:nth-child(4n) {
+			align-self: end;
+		}
 	}
 }
