--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,4 @@
 @import './components/theme-toggle';
 @import './components/summary';
 @import './components/card';
+@import './components/statistic';
