--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 @import './layout/container';
 @import './layout/grid';
 
+@import './utility/background-pattern';
 @import './utility/before-border-top';
 @import './utility/section-heading';
 
