Changing class to data attribute

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,7 +8,7 @@ body {
 	color: var(--clr-text);
 	background-color: var(--bg-body);
 
-	&.theme-dark {
+	&[data-theme='dark'] {
 		@include mixins.stage(dark);
 	}
 
